# serializer version: 1
# name: test_holidaymode[binary_sensor.ndj_climatecontrol_is_holiday_mode_active-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.ndj_climatecontrol_is_holiday_mode_active',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Is holiday mode active',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:information-outline',
    'original_name': 'Is holiday mode active',
    'platform': 'daikin_onecta',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'isholidaymodeactive',
    'unique_id': '13995b32-fc6e-43ed-918e-5d2b01095ccb_climateControl_None_isHolidayModeActive',
    'unit_of_measurement': None,
  })
# ---
# name: test_holidaymode[binary_sensor.ndj_climatecontrol_is_holiday_mode_active-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'icon': 'mdi:information-outline',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.ndj_climatecontrol_is_holiday_mode_active',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_holidaymode[binary_sensor.ndj_climatecontrol_is_in_error_state-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.ndj_climatecontrol_is_in_error_state',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Is in error state',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
    'original_icon': 'mdi:information-outline',
    'original_name': 'Is in error state',
    'platform': 'daikin_onecta',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'isinerrorstate',
    'unique_id': '13995b32-fc6e-43ed-918e-5d2b01095ccb_climateControl_None_isInErrorState',
    'unit_of_measurement': None,
  })
# ---
# name: test_holidaymode[binary_sensor.ndj_climatecontrol_is_in_error_state-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'problem',
      'icon': 'mdi:information-outline',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.ndj_climatecontrol_is_in_error_state',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_holidaymode[binary_sensor.ndj_climatecontrol_is_in_warning_state-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.ndj_climatecontrol_is_in_warning_state',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Is in warning state',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
    'original_icon': 'mdi:information-outline',
    'original_name': 'Is in warning state',
    'platform': 'daikin_onecta',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'isinwarningstate',
    'unique_id': '13995b32-fc6e-43ed-918e-5d2b01095ccb_climateControl_None_isInWarningState',
    'unit_of_measurement': None,
  })
# ---
# name: test_holidaymode[binary_sensor.ndj_climatecontrol_is_in_warning_state-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'problem',
      'icon': 'mdi:information-outline',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.ndj_climatecontrol_is_in_warning_state',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_holidaymode[binary_sensor.ndj_domestichotwaterflowthrough_is_holiday_mode_active-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.ndj_domestichotwaterflowthrough_is_holiday_mode_active',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Is holiday mode active',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:information-outline',
    'original_name': 'Is holiday mode active',
    'platform': 'daikin_onecta',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'isholidaymodeactive',
    'unique_id': '13995b32-fc6e-43ed-918e-5d2b01095ccb_domesticHotWaterFlowThrough_None_isHolidayModeActive',
    'unit_of_measurement': None,
  })
# ---
# name: test_holidaymode[binary_sensor.ndj_domestichotwaterflowthrough_is_holiday_mode_active-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'icon': 'mdi:information-outline',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.ndj_domestichotwaterflowthrough_is_holiday_mode_active',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_holidaymode[binary_sensor.ndj_domestichotwaterflowthrough_is_in_error_state-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.ndj_domestichotwaterflowthrough_is_in_error_state',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Is in error state',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
    'original_icon': 'mdi:information-outline',
    'original_name': 'Is in error state',
    'platform': 'daikin_onecta',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'isinerrorstate',
    'unique_id': '13995b32-fc6e-43ed-918e-5d2b01095ccb_domesticHotWaterFlowThrough_None_isInErrorState',
    'unit_of_measurement': None,
  })
# ---
# name: test_holidaymode[binary_sensor.ndj_domestichotwaterflowthrough_is_in_error_state-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'problem',
      'icon': 'mdi:information-outline',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.ndj_domestichotwaterflowthrough_is_in_error_state',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_holidaymode[binary_sensor.ndj_domestichotwaterflowthrough_is_in_warning_state-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.ndj_domestichotwaterflowthrough_is_in_warning_state',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Is in warning state',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
    'original_icon': 'mdi:information-outline',
    'original_name': 'Is in warning state',
    'platform': 'daikin_onecta',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'isinwarningstate',
    'unique_id': '13995b32-fc6e-43ed-918e-5d2b01095ccb_domesticHotWaterFlowThrough_None_isInWarningState',
    'unit_of_measurement': None,
  })
# ---
# name: test_holidaymode[binary_sensor.ndj_domestichotwaterflowthrough_is_in_warning_state-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'problem',
      'icon': 'mdi:information-outline',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.ndj_domestichotwaterflowthrough_is_in_warning_state',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_holidaymode[binary_sensor.ndj_gateway_is_firmware_update_supported-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.ndj_gateway_is_firmware_update_supported',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Is firmware update supported',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:information-outline',
    'original_name': 'Is firmware update supported',
    'platform': 'daikin_onecta',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'isfirmwareupdatesupported',
    'unique_id': '13995b32-fc6e-43ed-918e-5d2b01095ccb_gateway_None_isFirmwareUpdateSupported',
    'unit_of_measurement': None,
  })
# ---
# name: test_holidaymode[binary_sensor.ndj_gateway_is_firmware_update_supported-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'icon': 'mdi:information-outline',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.ndj_gateway_is_firmware_update_supported',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_holidaymode[binary_sensor.ndj_gateway_is_in_error_state-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'binary_sensor.ndj_gateway_is_in_error_state',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Is in error state',
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.PROBLEM: 'problem'>,
    'original_icon': 'mdi:information-outline',
    'original_name': 'Is in error state',
    'platform': 'daikin_onecta',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'isinerrorstate',
    'unique_id': '13995b32-fc6e-43ed-918e-5d2b01095ccb_gateway_None_isInErrorState',
    'unit_of_measurement': None,
  })
# ---
# name: test_holidaymode[binary_sensor.ndj_gateway_is_in_error_state-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'problem',
      'icon': 'mdi:information-outline',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.ndj_gateway_is_in_error_state',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_holidaymode[button.ndj_refresh-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'button.ndj_refresh',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Refresh',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:refresh',
    'original_name': 'Refresh',
    'platform': 'daikin_onecta',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '13995b32-fc6e-43ed-918e-5d2b01095ccb_refresh',
    'unit_of_measurement': None,
  })
# ---
# name: test_holidaymode[button.ndj_refresh-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'icon': 'mdi:refresh',
    }),
    'context': <ANY>,
    'entity_id': 'button.ndj_refresh',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_holidaymode[climate.ndj_room_temperature-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'hvac_modes': list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT: 'heat'>,
      ]),
      'max_temp': 30,
      'min_temp': 10,
      'preset_modes': list([
        'away',
        'none',
      ]),
      'target_temp_step': 0.5,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.ndj_room_temperature',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Room Temperature',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Room Temperature',
    'platform': 'daikin_onecta',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 400>,
    'translation_key': 'roomtemperature',
    'unique_id': '13995b32-fc6e-43ed-918e-5d2b01095ccb_roomTemperature',
    'unit_of_measurement': None,
  })
# ---
# name: test_holidaymode[climate.ndj_room_temperature-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_temperature': 23,
      'hvac_modes': list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT: 'heat'>,
      ]),
      'max_temp': 30,
      'min_temp': 10,
      'preset_mode': 'away',
      'preset_modes': list([
        'away',
        'none',
      ]),
      'supported_features': <ClimateEntityFeature: 400>,
      'target_temp_step': 0.5,
    }),
    'context': <ANY>,
    'entity_id': 'climate.ndj_room_temperature',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'heat',
  })
# ---
# name: test_holidaymode[select.ndj_climatecontrol_schedule-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'Automatic 1',
        'Automatic 2',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.ndj_climatecontrol_schedule',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Schedule',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:calendar-clock',
    'original_name': 'Schedule',
    'platform': 'daikin_onecta',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'schedule',
    'unique_id': '13995b32-fc6e-43ed-918e-5d2b01095ccb_climateControl_schedule',
    'unit_of_measurement': None,
  })
# ---
# name: test_holidaymode[select.ndj_climatecontrol_schedule-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'icon': 'mdi:calendar-clock',
      'options': list([
        'Automatic 1',
        'Automatic 2',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.ndj_climatecontrol_schedule',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'Automatic 1',
  })
# ---
# name: test_holidaymode[sensor.ndj_climatecontrol_control_mode-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.ndj_climatecontrol_control_mode',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Control mode',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:alphabetical',
    'original_name': 'Control mode',
    'platform': 'daikin_onecta',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'controlmode',
    'unique_id': '13995b32-fc6e-43ed-918e-5d2b01095ccb_climateControl_None_controlMode',
    'unit_of_measurement': None,
  })
# ---
# name: test_holidaymode[sensor.ndj_climatecontrol_control_mode-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'icon': 'mdi:alphabetical',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.ndj_climatecontrol_control_mode',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'roomTemperature',
  })
# ---
# name: test_holidaymode[sensor.ndj_climatecontrol_error_code-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.ndj_climatecontrol_error_code',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Error code',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:information-outline',
    'original_name': 'Error code',
    'platform': 'daikin_onecta',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'errorcode',
    'unique_id': '13995b32-fc6e-43ed-918e-5d2b01095ccb_climateControl_None_errorCode',
    'unit_of_measurement': None,
  })
# ---
# name: test_holidaymode[sensor.ndj_climatecontrol_error_code-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'icon': 'mdi:information-outline',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.ndj_climatecontrol_error_code',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '',
  })
# ---
# name: test_holidaymode[sensor.ndj_climatecontrol_on_off_mode-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.ndj_climatecontrol_on_off_mode',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'On/Off mode',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:toggle-switch-variant',
    'original_name': 'On/Off mode',
    'platform': 'daikin_onecta',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'onoffmode',
    'unique_id': '13995b32-fc6e-43ed-918e-5d2b01095ccb_climateControl_None_onOffMode',
    'unit_of_measurement': None,
  })
# ---
# name: test_holidaymode[sensor.ndj_climatecontrol_on_off_mode-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'icon': 'mdi:toggle-switch-variant',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.ndj_climatecontrol_on_off_mode',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_holidaymode[sensor.ndj_climatecontrol_room_temperature-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.ndj_climatecontrol_room_temperature',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Room temperature',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 1,
      }),
    }),
    'original_device_class': <SensorDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': '',
    'original_name': 'Room temperature',
    'platform': 'daikin_onecta',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'roomtemperature',
    'unique_id': '13995b32-fc6e-43ed-918e-5d2b01095ccb_climateControl_sensoryData_roomTemperature',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_holidaymode[sensor.ndj_climatecontrol_room_temperature-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'temperature',
      'icon': '',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.ndj_climatecontrol_room_temperature',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '23',
  })
# ---
# name: test_holidaymode[sensor.ndj_domestichotwaterflowthrough_error_code-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.ndj_domestichotwaterflowthrough_error_code',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Error code',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:information-outline',
    'original_name': 'Error code',
    'platform': 'daikin_onecta',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'errorcode',
    'unique_id': '13995b32-fc6e-43ed-918e-5d2b01095ccb_domesticHotWaterFlowThrough_None_errorCode',
    'unit_of_measurement': None,
  })
# ---
# name: test_holidaymode[sensor.ndj_domestichotwaterflowthrough_error_code-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'icon': 'mdi:information-outline',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.ndj_domestichotwaterflowthrough_error_code',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '',
  })
# ---
# name: test_holidaymode[sensor.ndj_domestichotwaterflowthrough_on_off_mode-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.ndj_domestichotwaterflowthrough_on_off_mode',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'On/Off mode',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:toggle-switch-variant',
    'original_name': 'On/Off mode',
    'platform': 'daikin_onecta',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'onoffmode',
    'unique_id': '13995b32-fc6e-43ed-918e-5d2b01095ccb_domesticHotWaterFlowThrough_None_onOffMode',
    'unit_of_measurement': None,
  })
# ---
# name: test_holidaymode[sensor.ndj_domestichotwaterflowthrough_on_off_mode-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'icon': 'mdi:toggle-switch-variant',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.ndj_domestichotwaterflowthrough_on_off_mode',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_holidaymode[sensor.ndj_gateway_error_code-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.ndj_gateway_error_code',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Error code',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:information-outline',
    'original_name': 'Error code',
    'platform': 'daikin_onecta',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'errorcode',
    'unique_id': '13995b32-fc6e-43ed-918e-5d2b01095ccb_gateway_None_errorCode',
    'unit_of_measurement': None,
  })
# ---
# name: test_holidaymode[sensor.ndj_gateway_error_code-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'icon': 'mdi:information-outline',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.ndj_gateway_error_code',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '',
  })
# ---
# name: test_holidaymode[sensor.ndj_gateway_ip_address-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.ndj_gateway_ip_address',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'IP address',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:ip-network',
    'original_name': 'IP address',
    'platform': 'daikin_onecta',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'ipaddress',
    'unique_id': '13995b32-fc6e-43ed-918e-5d2b01095ccb_gateway_None_ipAddress',
    'unit_of_measurement': None,
  })
# ---
# name: test_holidaymode[sensor.ndj_gateway_ip_address-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'icon': 'mdi:ip-network',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.ndj_gateway_ip_address',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '192.168.45.16',
  })
# ---
# name: test_holidaymode[sensor.ndj_gateway_ratelimit_remaining_day-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.ndj_gateway_ratelimit_remaining_day',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Ratelimit remaining day',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:information-outline',
    'original_name': 'Ratelimit remaining day',
    'platform': 'daikin_onecta',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'ratelimitremainingday',
    'unique_id': '13995b32-fc6e-43ed-918e-5d2b01095ccb_limitsensor_remaining_day',
    'unit_of_measurement': None,
  })
# ---
# name: test_holidaymode[sensor.ndj_gateway_ratelimit_remaining_day-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'icon': 'mdi:information-outline',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.ndj_gateway_ratelimit_remaining_day',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_holidaymode[water_heater.ndj-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'max_temp': 60.0,
      'min_temp': 35.0,
      'operation_list': list([
        'off',
        'heat_pump',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'water_heater',
    'entity_category': None,
    'entity_id': 'water_heater.ndj',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'daikin_onecta',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <WaterHeaterEntityFeature: 10>,
    'translation_key': None,
    'unique_id': '13995b32-fc6e-43ed-918e-5d2b01095ccb',
    'unit_of_measurement': None,
  })
# ---
# name: test_holidaymode[water_heater.ndj-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_temperature': None,
      'max_temp': 60.0,
      'min_temp': 35.0,
      'operation_list': list([
        'off',
        'heat_pump',
      ]),
      'operation_mode': 'heat_pump',
      'supported_features': <WaterHeaterEntityFeature: 10>,
      'target_temp_high': None,
      'target_temp_low': None,
      'target_temp_step': 1.0,
      'temperature': 49.0,
    }),
    'context': <ANY>,
    'entity_id': 'water_heater.ndj',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'heat_pump',
  })
# ---
